remove set up SASS

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cabane à fruits</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/css/menus.css">
 </head>
 <body>
+    <header>
+        <a href="#"><img src="./assets/img/logo-la-cabane-a-fruits.png" alt="Logo de la cabane à fruits" id="logo"></a>
+    </header>
     
 </body>
 </html>
