added call to action design

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="assets/js/script.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap" rel="stylesheet"> 
 
     <!--font awesome script-->
     <script src="https://kit.fontawesome.com/6b8ed6a3ac.js" crossorigin="anonymous"></script>
@@ -18,7 +21,7 @@
         <div id="top-info">
             <p>ici la promotion ou annonce frais de port</p>
         </div>
-        <a href="#"><img src="assets/img/logo-la-cabane-a-fruits.png" alt="Le logo de la cabane à fruits"></a>
+        <a href="#"><img src="assets/img/logo-la-cabane-a-fruits-minimal.png" alt="Le logo de la cabane à fruits"></a>
         <nav>
             <i id="icons-bars-menu" class="fas fa-bars"></i>
             <div id="menu-toggle">
@@ -37,9 +40,9 @@
             <figure> 
                 <div>
                     <h1>Retrouvez le vrai goût des fruits</h1>
-                    <button> voir la boutique </button>
+                    <a href="#">VOIR LA BOUTIQUE </a> 
                 </div>
-                <img src="assets/img/huile-olive" 
+                <img src="assets/img/nectar-nature.png" 
                 alt="Une box de Nectar de fruits">
                 
             </figure>
