--- a/index.html
+++ b/index.html
@@ -51,9 +51,30 @@
         </section>
         <section id="engagements">
             <h2>A la cabane à fruits, nous nous engageons à ...</h2>
-            <div> engagement 1</div>
-            <div> engagement 2</div>
-            <div> engagement 3</div>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/illustration-paysans.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Une rémunération au juste prix de nos fournisseurs</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/local-farmer.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Vous porposer un gamme de produits de qualité issu du terroir français.</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/illustration-paysans.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Une rémunération au juste prix de nos fournisseurs</h3>
+                </article>
+            </a>
         </section>
         <section id="products">
             <h2>Notre selection de produits ...</h2>
