added design products

--- a/index.html
+++ b/index.html
@@ -78,9 +78,30 @@
         </section>
         <section id="products">
             <h2>Notre selection de produits ...</h2>
-            <div> produit 1</div>
-            <div> produit 2</div>
-            <div> produit 3</div>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/huile-olive.png" alt="illustration paysants">
+                    </figure>
+                    <h3>L'huile d'Olive Française</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/nectar-box.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Nos Nectars de Fruits</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/vins-vignes.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Notre cave à vins</h3>
+                </article>
+            </a>
 
         </section>
         <section id="producteurs">
