added background color of browser

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cabane à fruits</title>
 
+    <meta name="theme-color" content="#db5945">
+
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="assets/js/script.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
