--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>La cabane à fruits</title>
 
-    <meta name="theme-color" content="#db5945">
+    <meta name="theme-color" content="#FFC300">
 
     <link rel="stylesheet" href="./assets/css/style.css">
     <script src="assets/js/script.js"></script>
