added video in call to action

--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
                     <h1>Retrouvez le vrai goût des fruits</h1>
                     <a href="#">VOIR LA BOUTIQUE </a> 
                 </div>
-                <img src="assets/img/nectar-nature.png" 
-                alt="Une box de Nectar de fruits">
+                <video src="assets/img/Lavande dans la Drome - DRONE.mp4" muted autoplay loop></video>
                 
             </figure>
 
@@ -72,7 +71,7 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/illustration-paysans.png" alt="illustration paysants">
+                        <img src="assets/img/farmer-family.png" alt="illustration paysants">
                     </figure>
                     <h3>Une rémunération au juste prix de nos fournisseurs</h3>
                 </article>
