added pitctures on products items

--- a/index.html
+++ b/index.html
@@ -82,9 +82,8 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/huile-olive.png" alt="illustration paysants">
+                        <img src="assets/img/olive-oil.png" alt="illustration paysants">
                     </figure>
-                    <h3>L'huile d'Olive Française</h3>
                 </article>
             </a>
             <a href="#">
@@ -92,15 +91,13 @@
                     <figure>
                         <img src="assets/img/nectar-box.png" alt="illustration paysants">
                     </figure>
-                    <h3>Nos Nectars de Fruits</h3>
                 </article>
             </a>
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/vins-vignes.png" alt="illustration paysants">
+                        <img src="assets/img/wine-flat-design.png" alt="illustration paysants">
                     </figure>
-                    <h3>Notre cave à vins</h3>
                 </article>
             </a>
 
