changed design homepage --> products illustartions

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/nectar-box.png" alt="illustration paysants">
+                        <img src="assets/img/flat-fruits-juice.png" alt="illustration paysants">
                     </figure>
                 </article>
             </a>
