changed call to action

--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
         <section id="call-to-action">
             <figure> 
                 <div>
-                    <h1>Retrouvez le vrai goût des fruits</h1>
+                    <h1><span id="flag-blue"> Goût,</span> <br> terroir & savoir faire <br> <span id="flag-red">français</span> </h1>
                     <a href="#">VOIR LA BOUTIQUE </a> 
                 </div>
-                <video src="assets/img/Lavande dans la Drome - DRONE.mp4" muted autoplay loop></video>
+                <img src="assets/img/les-pruiduits.png" alt="les produits de la cabane à fruits">
                 
             </figure>
 
@@ -82,14 +82,14 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/olive-oil.png" alt="illustration paysants">
+                        <img src="assets/img/huile-olive.png" alt="illustration paysants">
                     </figure>
                 </article>
             </a>
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/flat-fruits-juice.png" alt="illustration paysants">
+                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
                     </figure>
                 </article>
             </a>
