changed call to action

--- a/index.html
+++ b/index.html
@@ -43,14 +43,10 @@
             <figure> 
                 <div>
                     
-                    <a id="boutique" href="#">VOIR LA BOUTIQUE </a> 
+                    <a id="boutique" href="#"> <i class="fas fa-store"></i></a> 
                 </div>
-                <img src="assets/img/produits-plongee.png" alt="les produits de la cabane à fruits">
+                <img src="assets/img/boutique-produits.png" alt="les produits de la cabane à fruits">
                 
-            </figure>
-
-            <figure>
-                <img id="ruban" src="assets/img/ruban-bbr.png" alt="">
             </figure>
         </section>
         <section id="engagements">
