changed border radius

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <figure> 
                 <div>
                     
-                    <a id="boutique" href="#"> <i class="fas fa-store"></i></a> 
+                    <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
                 <img src="assets/img/boutique-produits.png" alt="les produits de la cabane à fruits">
                 
