--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </figure>
         </section>
         <section id="engagements">
-            <h2>A la cabane à fruits, nous nous engageons à ...</h2>
+            <h2>Les engagements  de la Cabane à fruits</h2>
             <a href="#">
                 <article>
                     <figure>
