added video call to action

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                     <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
-                <img src="assets/img/boutique-produits.png" alt="les produits de la cabane à fruits">
+                <video src="/assets/img/falling fruit.mp4" muted autoplay loop></video>
                 
             </figure>
         </section>
@@ -77,12 +77,13 @@
             </a>
         </section>
         <section id="products">
-            <h2>Notre selection de produits ...</h2>
+            <h2>Notre selection de produits</h2>
             <a href="#">
                 <article>
                     <figure>
                         <img src="assets/img/huile-olive.png" alt="illustration paysants">
                     </figure>
+                    <h3>Nos huiles d'olive</h3>
                 </article>
             </a>
             <a href="#">
@@ -90,6 +91,23 @@
                     <figure>
                         <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
                     </figure>
+                    <h3>Nos nectars de fruits</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Nos nectars de fruits</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Nos nectars de fruits</h3>
                 </article>
             </a>
             <a href="#">
@@ -97,6 +115,7 @@
                     <figure>
                         <img src="assets/img/wine-flat-design.png" alt="illustration paysants">
                     </figure>
+                    <h3>Notre cave à vin </h3>
                 </article>
             </a>
 
