--- a/index.html
+++ b/index.html
@@ -78,6 +78,39 @@
         </section>
         <section id="products">
             <h2>Notre selection de produits</h2>
+            
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/box-a-composer.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Nos BOXs à composer</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Nos nectars de fruits</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/Miels-confitures.png" class="obj-top" alt="illustration paysants">
+                    </figure>
+                    <h3>Nos confitures & Miels</h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/presentation-vins.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Notre cave à vin </h3>
+                </article>
+            </a>
             <a href="#">
                 <article>
                     <figure>
@@ -86,39 +119,6 @@
                     <h3>Nos huiles d'olive</h3>
                 </article>
             </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Nos nectars de fruits</h3>
-                </article>
-            </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Nos nectars de fruits</h3>
-                </article>
-            </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Nos nectars de fruits</h3>
-                </article>
-            </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/wine-flat-design.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Notre cave à vin </h3>
-                </article>
-            </a>
-
         </section>
         <section id="producteurs">
             <h2>Nos producteurs français ...</h2>
