--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <figure>
                         <img src="assets/img/illustration-paysans.png" alt="illustration paysants">
                     </figure>
-                    <h3>Une rémunération au juste prix de nos fournisseurs</h3>
+                    <h3>Nos produits ne font pas le tour de la terre. Tous nos producteurs se trouvent dans un rayon de 90km (hors Champagne).</h3>
                 </article>
             </a>
             <a href="#">
@@ -64,7 +64,15 @@
                     <figure>
                         <img src="assets/img/local-farmer.png" alt="illustration paysants">
                     </figure>
-                    <h3>Vous porposer un gamme de produits de qualité issu du terroir français.</h3>
+                    <h3>Tous nos produits proviennent de producteurs passionnés qui ont à coeur de vous faire découvrir leur travail. </h3>
+                </article>
+            </a>
+            <a href="#">
+                <article>
+                    <figure>
+                        <img src="assets/img/local-farmer.png" alt="illustration paysants">
+                    </figure>
+                    <h3>Marge équitable entre le producteurs et la cabane à fruits. </h3>
                 </article>
             </a>
             <a href="#">
@@ -72,7 +80,7 @@
                     <figure>
                         <img src="assets/img/farmer-family.png" alt="illustration paysants">
                     </figure>
-                    <h3>Une rémunération au juste prix de nos fournisseurs</h3>
+                    <h3>Produits sélectionnés avec soins pour leurs qualités, leur goût et l'implication des producteurs.</h3>
                 </article>
             </a>
         </section>
