added items engagemenst

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                     <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
-                <video src="/assets/img/falling fruit.mp4" muted autoplay loop></video>
+                <video src="/assets/img/Fruits Slow Motion.mp4" muted autoplay loop></video>
                 
             </figure>
         </section>
@@ -54,7 +54,7 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/illustration-paysans.png" alt="illustration paysants">
+                        <img src="assets/img/fare-market.png" alt="illustration paysants">
                     </figure>
                     <h3>Nos produits ne font pas le tour de la terre. Tous nos producteurs se trouvent dans un rayon de 90km (hors Champagne).</h3>
                 </article>
@@ -70,7 +70,7 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/local-farmer.png" alt="illustration paysants">
+                        <img src="assets/img/equitable-price.png" alt="illustration paysants">
                     </figure>
                     <h3>Marge équitable entre le producteurs et la cabane à fruits. </h3>
                 </article>
@@ -129,7 +129,7 @@
             </a>
         </section>
         <section id="producteurs">
-            <h2>Nos producteurs français ...</h2>
+            <h2>Nos producteurs français </h2>
             <div> producteur 1</div>
             <div> producteur 2</div>
             <div> produiteur 3</div>
