finish new design

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                     <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
-                <video src="/assets/img/Fruits Slow Motion.mp4" muted autoplay loop></video>
+               <img src="assets/img/products-large.png" alt="pot de confiture à la framboise">
                 
             </figure>
         </section>
