added button in call to action

--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         <section id="call-to-action">
             <figure> 
                 <div>
-                    
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
                <img src="assets/img/Cynorhodon_240g.png" alt="pot de confiture à la framboise">
