added number on articles in engagements

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
-               <img src="assets/img/Cynorhodon_240g.png" alt="pot de confiture à la framboise">
+               <video src="/assets/img/pub-fruits-call.mp4" autoplay muted loop></video>
                 
             </figure>
         </section>
@@ -58,6 +58,7 @@
                         <img src="assets/img/fare-market.png" alt="illustration paysants">
                     </figure>
                     <h3>Nos produits ne font pas le tour de la terre. Tous nos producteurs se trouvent dans un rayon de 90km (hors Champagne).</h3>
+                    <p>1</p>
                 </article>
             </a>
             <a href="#">
@@ -66,6 +67,7 @@
                         <img src="assets/img/local-farmer.png" alt="illustration paysants">
                     </figure>
                     <h3>Tous nos produits proviennent de producteurs passionnés qui ont à coeur de vous faire découvrir leur travail. </h3>
+                    <p>2</p>
                 </article>
             </a>
             <a href="#">
@@ -74,6 +76,7 @@
                         <img src="assets/img/equitable-price.png" alt="illustration paysants">
                     </figure>
                     <h3>Marge équitable entre le producteurs et la cabane à fruits. </h3>
+                    <p>3</p>
                 </article>
             </a>
             <a href="#">
@@ -82,6 +85,7 @@
                         <img src="assets/img/farmer-family.png" alt="illustration paysants">
                     </figure>
                     <h3>Produits sélectionnés avec soins pour leurs qualités, leur goût et l'implication des producteurs.</h3>
+                    <p>4</p>
                 </article>
             </a>
         </section>
