added video in call to action

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
                     <a href="#"><i class="fab fa-facebook"></i></a>
                     <a href="#"> <i class="fas fa-store"></i></a> 
                 </div>
-               <video src="/assets/img/pub-fruits-call.mp4" autoplay muted loop></video>
-                
-            </figure>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aVpuu3LtCPA?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay></iframe>            </figure>
         </section>
         <section id="engagements">
             <h2>Nos engagements</h2>
