--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 </div>
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-NeDyRGy29U?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </section>
         <section id="engagements">
-            <h2>Nos engagements</h2>
+            <h2><i class="fas fa-check-circle"></i>Nos engagements</i></h2>
             <a href="#">
                 <article>
                     <figure>
@@ -86,7 +86,7 @@
             </a>
         </section>
         <section id="products">
-            <h2>Notre selection de produits</h2>
+            <h2><i class="fas fa-store"></i>Notre selection de produits</h2>
             
             <a href="#">
                 <article>
@@ -130,7 +130,7 @@
             </a>
         </section>
         <section id="producteurs">
-            <h2>Nos producteurs français </h2>
+            <h2><i class="fas fa-map-marker-alt"></i>Nos producteurs français </h2>
             <div> producteur 1</div>
             <div> producteur 2</div>
             <div> produiteur 3</div>
