design products cards

--- a/index.html
+++ b/index.html
@@ -86,14 +86,18 @@
             </a>
         </section>
         <section id="products">
-            <h2><i class="fas fa-store"></i>Notre selection de produits</h2>
+            <h2><i class="fas fa-shopping-basket"></i>Notre selection de produits</h2>
             
             <a href="#">
                 <article>
                     <figure>
                         <img src="assets/img/box-a-composer.png" alt="illustration paysants">
                     </figure>
-                    <h3>Nos BOXs à composer</h3>
+                    <div>
+                        <h3>Nos BOXs à composer</h3>
+                        <p>à partir de 35,90€</p>
+                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
+                    </div>
                 </article>
             </a>
             <a href="#">
@@ -101,7 +105,11 @@
                     <figure>
                         <img src="assets/img/nectars-etoile.png" alt="illustration paysants">
                     </figure>
-                    <h3>Nos nectars de fruits</h3>
+                    <div>
+                        <h3>Nos nectars de <br> fruits</h3>
+                        <p>à partir de 4€</p>
+                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
+                    </div>
                 </article>
             </a>
             <a href="#">
@@ -109,7 +117,11 @@
                     <figure>
                         <img src="assets/img/Miels-confitures.png" class="obj-top" alt="illustration paysants">
                     </figure>
-                    <h3>Nos confitures & Miels</h3>
+                    <div>
+                        <h3>Nos confitures <br> & Miels</h3>
+                        <p>à partir de 5€</p>
+                        <a href="#" class="btn-grad"> <i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                    </div>
                 </article>
             </a>
             <a href="#">
@@ -117,7 +129,11 @@
                     <figure>
                         <img src="assets/img/presentation-vins.png" alt="illustration paysants">
                     </figure>
-                    <h3>Notre cave à vin </h3>
+                    <div>
+                        <h3>Notre cave à vin </h3>
+                        <p>à partir de 12€</p>
+                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                    </div>
                 </article>
             </a>
             <a href="#">
@@ -125,7 +141,11 @@
                     <figure>
                         <img src="assets/img/huile-olive.png" alt="illustration paysants">
                     </figure>
-                    <h3>Nos huiles d'olive</h3>
+                    <div>
+                        <h3>Nos huiles d'olive</h3>
+                        <p>à partir de 18€</p>
+                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                    </div>
                 </article>
             </a>
         </section>
