changed picture miel & confitures

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/Miels-confitures.png" class="obj-top" alt="illustration paysants">
+                        <img src="assets/img/Cynorhodon_240g.png" class="" alt="illustration paysants">
                     </figure>
                     <div>
                         <h3>Nos confitures <br> & Miels</h3>
