finish products section

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <a href="#">
                 <article>
                     <figure>
-                        <img src="assets/img/box-a-composer.png" alt="illustration paysants">
+                        <img class="obj-center" src="assets/img/boutique-produits.png" alt="illustration paysants">
                     </figure>
                     <div>
                         <h3>Nos BOXs à composer</h3>
