added js for button engagement

--- a/index.html
+++ b/index.html
@@ -48,42 +48,45 @@
                 <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-NeDyRGy29U?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </section>
         <section id="engagements">
             <h2><i class="fas fa-check-circle"></i>Nos engagements</i></h2>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/fare-market.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Nos produits ne font pas le tour de la terre. Tous nos producteurs se trouvent dans un rayon de 90km (hors Champagne).</h3>
-                    <p>1</p>
-                </article>
-            </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/local-farmer.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Tous nos produits proviennent de producteurs passionnés qui ont à coeur de vous faire découvrir leur travail. </h3>
-                    <p>2</p>
-                </article>
-            </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/equitable-price.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Marge équitable entre le producteurs et la cabane à fruits. </h3>
-                    <p>3</p>
-                </article>
-            </a>
-            <a href="#">
-                <article>
-                    <figure>
-                        <img src="assets/img/farmer-family.png" alt="illustration paysants">
-                    </figure>
-                    <h3>Produits sélectionnés avec soins pour leurs qualités, leur goût et l'implication des producteurs.</h3>
-                    <p>4</p>
-                </article>
-            </a>
+            <button id="btn_engagement">En savoir plus ...</button>
+            <div id="engagement_container" class="d-none">
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="assets/img/fare-market.png" alt="illustration paysants">
+                        </figure>
+                        <h3>Nos produits ne font pas le tour de la terre. Tous nos producteurs se trouvent dans un rayon de 90km (hors Champagne).</h3>
+                        <p>1</p>
+                    </article>
+                </a>
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="assets/img/local-farmer.png" alt="illustration paysants">
+                        </figure>
+                        <h3>Tous nos produits proviennent de producteurs passionnés qui ont à coeur de vous faire découvrir leur travail. </h3>
+                        <p>2</p>
+                    </article>
+                </a>
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="assets/img/equitable-price.png" alt="illustration paysants">
+                        </figure>
+                        <h3>Marge équitable entre le producteurs et la cabane à fruits. </h3>
+                        <p>3</p>
+                    </article>
+                </a>
+                <a href="#">
+                    <article>
+                        <figure>
+                            <img src="assets/img/farmer-family.png" alt="illustration paysants">
+                        </figure>
+                        <h3>Produits sélectionnés avec soins pour leurs qualités, leur goût et l'implication des producteurs.</h3>
+                        <p>4</p>
+                    </article>
+                </a>
+            </div>
         </section>
         <section id="products">
             <h2><i class="fas fa-shopping-basket"></i>Notre selection de produits</h2>
