added menu toggle

--- a/index.html
+++ b/index.html
@@ -24,12 +24,16 @@
         </div>
         <a href="#"><img src="assets/img/logo-la-cabane-a-fruits-minimal.png" alt="Le logo de la cabane à fruits"></a>
         <nav>
-            <i id="icons-bars-menu" class="fas fa-bars"></i>
-            <div id="menu-toggle">
+            <i id="icons_bars_menu" class="fas fa-bars"></i>
+           
+            <div id="menu_toggle">
+                <i  id="icon_cross_menu" class="fas fa-times"></i>
+                <a href="#"><img src="assets/img/logo-la-cabane-a-fruits-minimal.png" alt="Le logo de la cabane à fruits"></a>
                 <ul>
-                    <li><a href="#">Nos vins</a></li>
-                    <li><a href="#">Nos Nectars</a></li>
-                    <li><a href="#">Nos champagnes</a></li>
+                    <li><a href="#"><i class="fas fa-box-open"></i>Nos BOXs <br> <span class="menu-subtitles">à composer</span></a></li>
+                    <li><a href="#"><i class="fas fa-apple-alt"></i>Nos Nectars <br> <span class="menu-subtitles">de fruit</span></a></li>
+                    <li><a href="#"><i class="fas fa-wine-bottle"></i>Notre cave <br><span class="menu-subtitles">à vin & Champagne</span></a></li>
+                    <li><a href="#"><i class="fas fa-bread-slice"></i>Nos confitures <br> <span class="menu-subtitles">& Miels</span></a></li>
                 </ul>
 
             </div>
