added pages en constrction + link

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <li><a href="#"><i class="fas fa-apple-alt"></i>Nos Nectars <br> <span class="menu-subtitles">de fruit</span></a></li>
                     <li><a href="#"><i class="fas fa-wine-bottle"></i>Notre cave <br><span class="menu-subtitles">à vin & Champagne</span></a></li>
                     <li><a href="#"><i class="fas fa-bread-slice"></i>Nos confitures <br> <span class="menu-subtitles">& Miels</span></a></li>
+                    <li><a href="#"><i class="fab fa-pagelines"></i>Nos huiles <br> <span class="menu-subtitles">d'Olives</span></a></li>
                 </ul>
 
             </div>
@@ -45,11 +46,12 @@
         <section id="call-to-action">
             <figure> 
                 <div>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"> <i class="fas fa-store"></i></a> 
+                    <a href="https://www.instagram.com/la_cabane_a_fruits/?hl=fr"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/La-Cabane-%C3%A0-Fruits-103441918416877"><i class="fab fa-facebook"></i></a>
+                    <a href="/pages/en-construction.html"> <i class="fas fa-store"></i></a> 
                 </div>
-                <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/-NeDyRGy29U?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>        </section>
+                <img src="assets/img/nectars-paille.png" alt="">
+            </section>
         <section id="engagements">
             <h2><i class="fas fa-check-circle"></i>Nos engagements</i></h2>
             <button id="btn_engagement">En savoir plus ...</button>
@@ -103,7 +105,7 @@
                     <div>
                         <h3>Nos BOXs à composer</h3>
                         <p>à partir de 35,90€</p>
-                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
                     </div>
                 </article>
             </a>
@@ -115,7 +117,7 @@
                     <div>
                         <h3>Nos nectars de <br> fruits</h3>
                         <p>à partir de 4€</p>
-                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon <br> panier</a>
                     </div>
                 </article>
             </a>
@@ -127,7 +129,7 @@
                     <div>
                         <h3>Nos confitures <br> & Miels</h3>
                         <p>à partir de 5€</p>
-                        <a href="#" class="btn-grad"> <i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"> <i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
                     </div>
                 </article>
             </a>
@@ -139,7 +141,7 @@
                     <div>
                         <h3>Notre cave à vin </h3>
                         <p>à partir de 12€</p>
-                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
                     </div>
                 </article>
             </a>
@@ -151,7 +153,7 @@
                     <div>
                         <h3>Nos huiles d'olive</h3>
                         <p>à partir de 18€</p>
-                        <a href="#" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
+                        <a href="/pages/en-construction.html" class="btn-grad"><i class="fas fa-shopping-basket"></i>Remplir mon panier</a>
                     </div>
                 </article>
             </a>
