--- a/index.html
+++ b/index.html
@@ -160,9 +160,13 @@
         </section>
         <section id="producteurs">
             <h2><i class="fas fa-map-marker-alt"></i>Nos producteurs français </h2>
-            <div> producteur 1</div>
-            <div> producteur 2</div>
-            <div> produiteur 3</div>
+            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+            <div><figure><img src="assets/img/produteurs-francais.png" alt=""></figure></div>
+
         </section>
     </main>
     <footer>
